--- a/index.html
+++ b/index.html
@@ -2005,7 +2005,7 @@ function removeSymptom(button) {
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${selectedSymptomText},${irradiationsText}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n《お名前》：${formData.name}\n《電話番号》：${formData.phone}\n《ご来店回数》：${formData.visitCount}\n\n《コース》\n⇒${formData.selectedMenu}\n《メニュー》\n⇒${selectedSymptomText},${irradiationsText}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\nメッセージ\n⇒${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
