--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
             outline: 1px solid #2b2b2b;
             /* ここで枠線を指定 */
             outline-offset: 2px;
-    /* 外側に色を追加 */
-    box-shadow: 0 0 0 3px #fac239
+            /* 外側に色を追加 */
+            box-shadow: 0 0 0 3px #fac239
         }
 
         /* 必須マークのスタイル */
@@ -1132,16 +1132,21 @@
                 <span class="highlight-text">◆リラクゼーション◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="リラクゼーション" data-price="15000">リフレッシュコース(130分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="リラクゼーション" data-price="15000">fuuスペシャルコース(130分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="リラクゼーション"
+                    data-price="15000">リフレッシュコース(130分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="リラクゼーション"
+                    data-price="15000">fuuスペシャルコース(130分)</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">骨盤ストレッチ(20分)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ハイドロジェリーマスク(20分〜)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">OMEGA light【LED＆IR】(20分〜)</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">骨盤ストレッチ(20分)</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">ハイドロジェリーマスク(20分〜)</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">OMEGA
+                    light【LED＆IR】(20分〜)</button>
             </div>
         </div>
 
@@ -1150,21 +1155,31 @@
                 <span class="highlight-text">◆プラズマフェイシャル◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル" data-price="15000">シミケア・イボ(60分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル" data-price="15000">シワ・たるみ・毛穴・肝斑(60分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル" data-price="15000">頭皮ケア・薄毛・抜け毛(60分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル"
+                    data-price="15000">シミケア・イボ(60分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル"
+                    data-price="15000">シワ・たるみ・毛穴・肝斑(60分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="プラズマフェイシャル"
+                    data-price="15000">頭皮ケア・薄毛・抜け毛(60分)</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ハイドロジェリーマスク(20分〜)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">OMEGA light【LED＆IR】(20分〜)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">骨盤ストレッチ(20分)</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">もみほぐし(60分)</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">もみほぐし(40分)</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">足ツボ(40分)</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">足ツボ(20分)</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">ハイドロジェリーマスク(20分〜)</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">OMEGA light【LED＆IR】(20分〜)</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">骨盤ストレッチ(20分)</button>
+                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">もみほぐし(60分)</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">もみほぐし(40分)</button>
+                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">足ツボ(40分)</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">足ツボ(20分)</button>
             </div>
         </div>
 
@@ -1173,21 +1188,31 @@
                 <span class="highlight-text">◆痩身◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="痩身" data-price="15000">全身セルライトゼロ(120分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="痩身" data-price="15000">全身セルライトゼロ(90分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="痩身" data-price="15000">全身セルライトゼロ(60分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="痩身"
+                    data-price="15000">全身セルライトゼロ(120分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="痩身"
+                    data-price="15000">全身セルライトゼロ(90分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="痩身"
+                    data-price="15000">全身セルライトゼロ(60分)</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ハイドロジェリーマスク(20分〜)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">OMEGA light【LED＆IR】(20分〜)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">骨盤ストレッチ(20分)</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">もみほぐし(60分)</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">もみほぐし(40分)</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)" data-price="15000">足ツボ(40分)</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)" data-price="15000">足ツボ(20分)</button>
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">ハイドロジェリーマスク(20分〜)</button>
+                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">OMEGA light【LED＆IR】(20分〜)</button>
+                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">骨盤ストレッチ(20分)</button>
+                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">もみほぐし(60分)</button>
+                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">もみほぐし(40分)</button>
+                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">足ツボ(40分)</button>
+                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">足ツボ(20分)</button>
             </div>
         </div>
 
@@ -1361,7 +1386,7 @@
             let totalTimeText = `<span style="color:#0c0c0c;"><strong>所要時間</strong></span>：${hours > 0 ? hours + '時間' : ''}${minutes}分`;
 
             const totalAmountText = `<span style="color:#0c0c0c;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
-            
+
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
@@ -1752,68 +1777,68 @@
             updateDisplayInfo();
         }
 
-function removeSymptom(button) {
-  const category = button.getAttribute('data-category');
-  const name = button.getAttribute('data-name');
-  const container = document.getElementById("selected-menus-display");
+        function removeSymptom(button) {
+            const category = button.getAttribute('data-category');
+            const name = button.getAttribute('data-name');
+            const container = document.getElementById("selected-menus-display");
 
-  // 所要時間が変わるため、選択済み日時はクリア
-  selectedFullDate = '';
+            // 所要時間が変わるため、選択済み日時はクリア
+            selectedFullDate = '';
 
-  // 1) まずUI上の該当チップを即時削除（UIを真実のソースに）
-  const itemEl = button.closest('.menu-item');
-  if (itemEl) itemEl.remove();
+            // 1) まずUI上の該当チップを即時削除（UIを真実のソースに）
+            const itemEl = button.closest('.menu-item');
+            if (itemEl) itemEl.remove();
 
-  // 2) 元ボタン（.symptoms）を非アクティブ化
-  const srcBtn = [...document.querySelectorAll('.symptoms button')].find(
-    b => b.textContent === name && b.getAttribute('data-category') === category
-  );
-  if (srcBtn) srcBtn.classList.remove('active');
+            // 2) 元ボタン（.symptoms）を非アクティブ化
+            const srcBtn = [...document.querySelectorAll('.symptoms button')].find(
+                b => b.textContent === name && b.getAttribute('data-category') === category
+            );
+            if (srcBtn) srcBtn.classList.remove('active');
 
-  // 3) 配列は「今アクティブな症状ボタン」から再構築してズレを無くす
-  selectedSymptom = [...document.querySelectorAll('.symptoms button.active')].map(b => ({
-    category: b.getAttribute('data-category'),
-    name: b.textContent
-  }));
+            // 3) 配列は「今アクティブな症状ボタン」から再構築してズレを無くす
+            selectedSymptom = [...document.querySelectorAll('.symptoms button.active')].map(b => ({
+                category: b.getAttribute('data-category'),
+                name: b.textContent
+            }));
 
-  // 4) 時間・価格を再計算（activeボタンから）
-  selectedMenuTime = 0;
-  menuPrice = 0;
-  selectedSymptom.forEach(item => {
-    selectedMenuTime += (menuTimes[item.name] || 0);
-    const btn = [...document.querySelectorAll('.symptoms button')].find(
-      b => b.textContent === item.name && b.getAttribute('data-category') === item.category
-    );
-    if (btn) menuPrice += parseInt(btn.getAttribute('data-price') || '0', 10);
-  });
+            // 4) 時間・価格を再計算（activeボタンから）
+            selectedMenuTime = 0;
+            menuPrice = 0;
+            selectedSymptom.forEach(item => {
+                selectedMenuTime += (menuTimes[item.name] || 0);
+                const btn = [...document.querySelectorAll('.symptoms button')].find(
+                    b => b.textContent === item.name && b.getAttribute('data-category') === item.category
+                );
+                if (btn) menuPrice += parseInt(btn.getAttribute('data-price') || '0', 10);
+            });
 
-  // 5) カレンダー再取得
-  if (typeof fetchAvailability === 'function') {
-    fetchAvailability(currentDate);
-  }
+            // 5) カレンダー再取得
+            if (typeof fetchAvailability === 'function') {
+                fetchAvailability(currentDate);
+            }
 
-  // 6) 詳細テキストは閉じる
-  const treatmentText = document.getElementById("treatment-text");
-  if (treatmentText) {
-    treatmentText.style.display = 'none';
-    treatmentText.innerHTML = '';
-  }
+            // 6) 詳細テキストは閉じる
+            const treatmentText = document.getElementById("treatment-text");
+            if (treatmentText) {
+                treatmentText.style.display = 'none';
+                treatmentText.innerHTML = '';
+            }
 
-  // 7) 「配列の長さ」ではなく「UIにチップが残っているか」で表示制御
-  if (container) {
-    const remain = container.querySelectorAll('.menu-item').length;
-    if (remain === 0) {
-      container.style.display = 'none';
-      container.innerHTML = '';
-      const selectedMenuNameDiv = document.getElementById('selected-menu-name');
-      if (selectedMenuNameDiv) selectedMenuNameDiv.style.display = 'none';
-    } else {
-      container.style.display = 'block';
-    }
-  }
+            // 7) 「配列の長さ」ではなく「UIにチップが残っているか」で表示制御
+            if (container) {
+                const remain = container.querySelectorAll('.menu-item').length;
+                if (remain === 0) {
+                    container.style.display = 'none';
+                    container.innerHTML = '';
+                    const selectedMenuNameDiv = document.getElementById('selected-menu-name');
+                    if (selectedMenuNameDiv) selectedMenuNameDiv.style.display = 'none';
+                } else {
+                    container.style.display = 'block';
+                }
+            }
 
-  updateDisplayInfo();
-}
+            updateDisplayInfo();
+        }
 
         function updateSelectedMenusDisplay() {
             const selectedMenusDisplay = document.getElementById("selected-menus-display");
@@ -1969,50 +1994,69 @@ function removeSymptom(button) {
                 phone: document.getElementById('phone').value.trim(),
                 visitCount: visitCount,
                 selectedMenu: selectedMenu,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
+                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null,
                 irradiationsCount: irradiationsCount,
                 dates: [
-                    document.getElementById('date1').value,
-                    document.getElementById('date2').value,
-                    document.getElementById('date3').value
+                    document.getElementById('date1').value.trim(),
+                    document.getElementById('date2').value.trim(),
+                    document.getElementById('date3').value.trim()
                 ],
                 message: document.getElementById('message').value.trim()
             };
 
-            // フォームデータのチェック
-            if (!formData.name) {
-                alert('お名前を入力してください。');
-                return;
-            }
+            // バリデーション
+            if (!formData.name) { alert('お名前を入力してください。'); return; }
+            if (!formData.phone) { alert('電話番号を入力してください。'); return; }
+            if (!formData.selectedSymptom) { alert('メニューを選択してください。'); return; }
 
-            if (!formData.phone) {
-                alert('電話番号を入力してください。');
-                return;
-            }
+            // ★ ここを追加：希望日時の必須チェック
+            const [d1, d2, d3] = formData.dates;
+            if (!d1) { alert('《第一希望日》を選択してください。'); return; }
+            if (!d2) { alert('《第二希望日》を選択してください。'); return; }
+            // 第三希望も必須にしたい場合は↓を有効化
+            // if (!d3) { alert('《第三希望日》を選択してください。'); return; }
 
-            if (!formData.selectedSymptom) {
-                alert('メニューを選択してください。');
-                return;
-            }
-
-            // selectedSymptomを文字列に整形
+            // メニューを1行ずつ改行で整形
             const selectedSymptomText = formData.selectedSymptom
-                ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+                ? formData.selectedSymptom.map(item => `⇒${item.name}`).join('\n')
                 : 'メニュー未選択';
 
-            // irradiationsCountの整形（nullチェック）
             const irradiationsText = formData.irradiationsCount || 'なし';
+
+            // 空なら「未選択」として表示
+            const fmtOrNA = v => v ? formatDate(v) : '未選択';
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n《お名前》：${formData.name}\n《電話番号》：${formData.phone}\n《ご来店回数》：${formData.visitCount}\n\n《コース》\n⇒${formData.selectedMenu}\n《メニュー》\n⇒${selectedSymptomText},${irradiationsText}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\nメッセージ\n⇒${formData.message}`
+                text:
+                    `【予約フォーム】
+《お名前》：${formData.name}
+《電話番号》：${formData.phone}
+《ご来店回数》：${formData.visitCount}
+
+《コース》
+⇒${formData.selectedMenu}
+
+《メニュー》
+${selectedSymptomText}
+⇒${irradiationsText}
+
+【希望日時】
+《第一希望日》
+${fmtOrNA(formData.dates[0])}
+
+《第二希望日》
+${fmtOrNA(formData.dates[1])}
+
+《第三希望日》
+${fmtOrNA(formData.dates[2])}
+
+メッセージ
+⇒${formData.message}`
             }]).then(() => {
-                /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
-                /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
-                /* メッセージ送信失敗時の処理 */
                 console.error('メッセージの送信に失敗しました', err);
             });
         }
